--- a/templates/quiz/base.html
+++ b/templates/quiz/base.html
@@ -11,8 +11,7 @@
             {% endblock %}
         </title>
 
-        <!-- Change url of style sheet here -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}" /> 
     </head>
     <body>
 
@@ -21,14 +20,15 @@
                 <div class="logo">
 
                     <!-- Change urls here -->
-                    <h1><a href="index.html"><img src="">Quizhaholic</a></h1> 
+                    <h1><a href="{% url 'quiz:index' %}"><img src="">Quizhaholic</a></h1> 
                 </div>
                 <nav class="nav_links">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="{% url 'quiz:index' %}">Home</a></li>
                         <li><a href="categories.html">Categories</a></li>
                         {% if user.is_authenticated %}
                         <li><a href="profile.html">Profile</a></li>
+                        <li><a href = "{% url 'quiz:logout' %}">Logout</a></li>
                         {% endif %}
 
                     </ul>
@@ -38,28 +38,27 @@
             {% block auth_buttons_block %}
             {% endblock %}
 
+            <button class="burger-menu">☰</button>
 
             <div class="off-screen-menu">
                 <ul>
                     <!-- Change urls here -->
 
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="{% url 'quiz:index' %}">Home</a></li>
                     <li><a href="categories.html">Categories</a></li>
-                    <li><a href="profile.html">Profile</a></li>
                     {% if user.is_authenticated %}
                     <li><a href="profile.html">Profile</a></li>
+                    <li><a href="{% url 'quiz:logout' %}">Logout</a></li>
                     {% else %}
-                    <a href="login.html"><button>Login</button></a>
-                    <a href="register.html"><button>Register</button></a>
+                    <a href="{% url 'quiz:login' %}"><button>Login</button></a>
+                    <a href="{% url 'quiz:register' %}"><button>Register</button></a>
                     {% endif %}
                 </ul>
             </div>
 
-            <button class="burger-menu">☰</button>
             <div class="menu-overlay"></div>
 
-            <script src="script.js"></script>
-
+            <script src="{% static 'js/script.js' %}"></script>
         </header>
 
         {% block main_body_block %}
@@ -68,10 +67,12 @@
         <footer>
             <nav class = "nav_links"> 
                 <ul>
-                    <li><a href = "index.html">Home</a></li>
+                    <!-- Change all these links -->
+                    <li><a href = "{% url 'quiz:index' %}">Home</a></li>
                     <li><a href = "categories.html">Categories</a></li>
                     {% if user.is_authenticated %}
                     <li><a href = "profile.html">Profile</a></li>
+                    <li><a href = "{% url 'quiz:logout' %}">Logout</a></li>
                     {% endif %}
                 </ul>
             <nav>
