--- a/templates/quiz/leaderboards.html
+++ b/templates/quiz/leaderboards.html
@@ -42,7 +42,7 @@
                <div class="leaderboards_container">
 
                     <div class="lbNormal">
-                        <h2><u>Classic</u></h2>
+                        <h2><u>Normal</u></h2>
                         <div class = "lbNormal2">
                             <table class="lbTable">
                                 <tr><th>User</th><th>Score</th></tr>
