--- a/templates/quiz/profile.html
+++ b/templates/quiz/profile.html
@@ -38,7 +38,7 @@
 
                 <div class="container">
                     <h1><img src="pfp.png"> User123 (🔥 2-Day Streak)</h1> 
-                    <p>Check categries you have made or create new ones!</p>
+                    <p>Check categories you have made or create new ones!</p>
                 </div>
     
                 <div class = "quiz_heading">
