--- a/templates/quiz/category.html
+++ b/templates/quiz/category.html
@@ -17,16 +17,16 @@
                 </div>
                 <nav class="nav_links">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="categories.html">Categories</a></li>
-                        <li><a href="profile.html">Profile</a></li>
+                        <li><a href="{% url 'quiz:index' %}">Home</a></li>
+                        <li><a href="{% url 'quiz : categories'%}">Categories</a></li>
+                        <li><a href="{% url 'quiz:profile' %}">Profile</a></li>
                     </ul>
                 </nav>
             </div>
 
             <div class = "auth_buttons">
-                    <a href = "login.html"> <button>Login</button></a>
-                    <a href = "register.html"> <button>Register</button></a>
+                    <a href = "{% url 'quiz:login' %}"> <button>Login</button></a>
+                    <a href = "{% url 'quiz:register' %}"> <button>Register</button></a>
             </div>
 
             <button class="burger-menu">☰</button>
@@ -42,10 +42,10 @@
                 <label>Timed Mode : Answer as many questions as you can in 45 seconds </label>
 
                 <div>
-                    <a href="learn.html"><button>Learn Mode</button></a>
-                    <a href="play.html"><button>Normal Mode</button></a>
-                    <a href="timed.html"><button>Timed Mode</button></a>
-                    <a href="leaderboards.html"><button>Leaderboards</button></a>
+                    <a href="{% url 'quiz:fetch_question' %}"><button>Learn Mode</button></a>
+                    <a href="{% url 'quiz:fetch_question' %}" ><button>Normal Mode</button></a>
+                    <a href="{% url 'quiz:fetch_question' %}"><button>Timed Mode</button></a>
+                    <a href="{% url 'quiz:leaderboard' %}"><button>Leaderboards</button></a>
                 </div>
             </div>
         </main>
@@ -53,9 +53,9 @@
             <footer>
             <nav class = "nav_links"> 
                 <ul>
-                    <li><a href = "index.html">Home</a></li>
-                    <li><a href = "categories.html">Categories</a></li>
-                    <li><a href = "profile.html">Profile</a></li>
+                    <li><a href = "{% url 'quiz:index' %}">Home</a></li>
+                    <li><a href = "{% url 'quiz:categories' %} ">Categories</a></li>
+                    <li><a href = "{% url 'quiz:profile' %}">Profile</a></li>
                 </ul>
             </nav>
             </footer>
