--- a/templates/quiz/categories.html
+++ b/templates/quiz/categories.html
@@ -30,12 +30,12 @@ Categories
     {% endif %}
 
         <!-- Remove this later on  -->
-        <a href="category.html">
+        <!-- <a href="category.html">
             <div class="category_container">
                 <img src="gk.jpg" alt="Category">
                 <label>Category XX</label>
             </div>
-        </a>
+        </a> -->
     </div>
 </main>
 {% endblock %}
