--- a/templates/quiz/index.html
+++ b/templates/quiz/index.html
@@ -12,7 +12,7 @@ Home
         <label> “Welcome to Quizaholic! Test your knowledge, challenge yourself, and climb the leaderboards. Are you ready to play?”</label>
         <br>
         <!-- Change url here -->
-        <a href ="categories.html"><button>Start Game!</button></a>
+        <a href ="{% url 'quiz:categories' %}"><button>Start Game!</button></a>
     </div>
 </main>
 {% endblock %}
