--- a/templates/quiz/add_category.html
+++ b/templates/quiz/add_category.html
@@ -11,7 +11,7 @@ AddCategory
         <h1>Add Category</h1>
         <h3> Create your category here! </h3>
 
-        <form id="add_category_form" method="post" action="{%  %}">
+        <form id="add_category_form" method="post" action="{% url 'quiz:add_category' %}">
             {% csrf_token %}
 
             <!-- Change this to use forms -->
