--- a/templates/quiz/profile.html
+++ b/templates/quiz/profile.html
@@ -9,10 +9,10 @@ Profile
 <main class = "notmid">
 
     <div class="container">
-        <h1><img src="{% static 'images/pfp.png' %}"> {{ user.username }} </h1> 
-        {{ if user.streak != 0}}
-            <h1>(🔥 {{ user.streak }}-Day Streak)</h1>
-        {{ endif }}
+        <h1><img src="{{ user.userprofile.profile_picture.url }}" alt="Profile Picture" onerror="this.src='/media/profile_pics/default.png';"> {{ user.username }} </h1> 
+        {% if user.userprofile.streak and user.userprofile.streak != 0 %}
+        <h1>(🔥 {{ user.userprofile.streak }}-Day Streak)</h1>
+        {% endif %}
         <p>Add new questions by clicking on a category or add a new category</p>
     </div>
 
@@ -35,7 +35,7 @@ Profile
             {% endfor %}
         {% endif %}
 
-        <a href="add_category.html">            
+        <a href="{% url 'quiz:add_category' %}">            
             <div class = "category_container add-category">
                 <h1> + </h1>
             </div>
