Add Category and question need to be  fixed login and register work

--- a/templates/quiz/add_category.html
+++ b/templates/quiz/add_category.html
@@ -13,12 +13,8 @@ AddCategory
 
         <form id="add_category_form" method="post" action="{% url 'quiz:add_category' %}">
             {% csrf_token %}
+            {{ form.as_p }}
 
-            <!-- Change this to use forms -->
-            <label>New Category Name :</label>
-            <br>
-            <input type="text" name="new-category" value="" size="50" />
-            
             <input type="submit" value="Make Category" />
         </form>
     </div>
