--- a/templates/quiz/profile.html
+++ b/templates/quiz/profile.html
@@ -26,7 +26,7 @@ Profile
         {% if categories %}
             {% for c in categories %}
             <!-- Use urls here + varibles here -->
-            <a href="category.html">
+            <a href="{% url 'add_question' category_name_slug=category_name_slug %}">
                 <div class="category_container">
                     <img src="" alt="Category">
                     <label>{{ c.name }}</label>
